--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
@@ -7,19 +7,37 @@
     <section class="grid grid-2-3">
         <div class="inner-block-padr">
             <h1 class="heading-xlarge">
-                Manage an apprentice <em>(Content Review Required)</em>
+                Recruitment
             </h1>
-            <h2 class="heading-medium">Apprenticeship agent sign in<em>(Content Review Required)</em></h2>
-            <p class="text">
-                You'll be taken to the "Staff IDAMS Services" sign in
-                area. Once signed in you'll be automatically returned to our service.<em>(Content Review Required)</em>
-            </p>
             <p>
-                <a href="@Url.RouteUrl(ManagementRouteNames.SignIn)" class="button">Sign in</a>
+                Review vacancies, search for providers, search for candidates...
             </p>
+            <div class="get-started form-group">
+                <a href="@Url.RouteUrl(ManagementRouteNames.SignIn)" class="button">Agency</a>
+            </div>
         </div>
     </section>
     <section class="grid grid-1-3 gov-border">
-        <em>(Content Required)</em>
+        <br>
+        <ul class="list-text">
+            <li>
+                <a href="/recruitment/info-expect-from-employer.html">Responsibilities of the employer</a>
+            </li>
+            <li>
+                <a href="/recruitment/info-whos-involved.html">Who's involved in an apprenticeship?</a>
+            </li>
+            <li>
+                <a href="/recruitment/info-expect-from-apprentice.html">What to expect from your apprentice</a>
+            </li>
+            <li>
+                <a href="/recruitment/info-expect-from-provider.html">Responsibilities of the provider</a>
+            </li>
+            <li>
+                <a href="/recruitment/info-payments-and-funding.html">Payments and funding</a>
+            </li>
+            <li>
+                <a href="/recruitment/info-six-steps.html">How to employ an apprentice</a>
+            </li>
+        </ul>
     </section>
 </div>
