--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@{
     ViewBag.Title = "Recruit an Apprentice";
 }
 
@@ -35,7 +36,7 @@
                 <h2 class="heading-medium">New vacancy</h2>
                 <p class="font-xsmall">Create a new vacancy, clone or continue with a draft</p>
                 <div class="font-xsmall">
-                    <a href="create-vacancy.html" class="button">New vacancy</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.NewVacancyLandingPage)" class="button">New vacancy</a>
                 </div>
             </section>
             <section>
